--- a/extra-challenges/css bonus challenges/1_simple/generic-business-page/index.html
+++ b/extra-challenges/css bonus challenges/1_simple/generic-business-page/index.html
@@ -15,48 +15,46 @@
   <body>
     <!--  navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navbar">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Home</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <span class="navbar-links">Link 1</span>
-            </li>
-            <li class="nav-item">
-              <span class="navbar-links">Link 2</span>
-            </li>
-            <li class="nav-item">
-              <span class="navbar-links">Link 3</span>
-            </li>
-            <li class="nav-item">
-              <span class="navbar-links">Link 4</span>
-            </li>
-          </ul>
-        </div>
+      <a class="navbar-brand" href="#">Home</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <span class="navbar-links">Link 1</span>
+          </li>
+          <li class="nav-item">
+            <span class="navbar-links">Link 2</span>
+          </li>
+          <li class="nav-item">
+            <span class="navbar-links">Link 3</span>
+          </li>
+          <li class="nav-item">
+            <span class="navbar-links">Link 4</span>
+          </li>
+        </ul>
       </div>
     </nav>
     <!-- start of start page -->
     <div class="wrapper-start-page-contents">
-    <div class="container-start-page-contents">
-      <h1 class="start-page-header">START PAGE</h1>
-      <span class="template">Template by w3.css</span>
-      <button class="get-started">Get Started</button>
-    </div>
+      <div class="container-start-page-contents">
+        <h1>START PAGE</h1>
+        <span class="template">Template by w3.css</span>
+        <button class="get-started">Get Started</button>
+      </div>
     </div>
     <!-- end of start page -->
     <!-- start of first article -->
     <div class="container">
       <div class="container-fluid">
-        <div class="wrapper-first-article">
+        <div class="wrapper-article">
           <div class="container-articles">
-            <div class="container-first-article-p1">
+            <div class="container-article-p1">
               <h2>Lorem Ipsum</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
-            <div class="container-first-article-p2">
+            <div class="container-article-p2">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam facere ducimus deleniti aliquam architecto expedita sint libero repellendus iusto nihil quia fugit rerum dolores amet, possimus similique quidem autem! Doloremque dignissimos exercitationem porro commodi ducimus quia expedita, corporis consectetur laboriosam neque cumque, mollitia, fugiat harum repudiandae! Dolor necessitatibus perferendis unde quisquam eveniet aliquid iure, deserunt at ipsa minus praesentium tempore repellendus voluptatem, incidunt quis commodi consequuntur minima officiis molestias labore porro, fugiat corrupti. Fuga, est.</p>
             </div>
           </div>
@@ -68,25 +66,25 @@
     </div>
     <!-- end of first article -->
     <!-- start of second article -->
-    <div class="px-5 py-5" id="second-article">
+    <div class="container">
       <div class="container-fluid">
-        <div class="wrapper-second-article">
+        <div class="wrapper-article">
           <div class="container-anchor">
             <i class="fa fa-coffee"></i>
           </div>
-          <div class="container-articles-2">
-            <div class="container-second-article-p1">
+          <div class="container-articles">
+            <div class="container-article-p1">
               <h2>Lorem Ipsum</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
-            <div class="container-second-article-p2">
+            <div class="container-article-p2">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam facere ducimus deleniti aliquam architecto expedita sint libero repellendus iusto nihil quia fugit rerum dolores amet, possimus similique quidem autem! Doloremque dignissimos exercitationem porro commodi ducimus quia expedita, corporis consectetur laboriosam neque cumque, mollitia, fugiat harum repudiandae! Dolor necessitatibus perferendis unde quisquam eveniet aliquid iure, deserunt at ipsa minus praesentium tempore repellendus voluptatem, incidunt quis commodi consequuntur minima officiis molestias labore porro, fugiat corrupti. Fuga, est.</p>
             </div>
           </div>
         </div>
       </div>
     </div>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
